Add basic input

--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
   </head>
   <body>
-    Test
-    <br />
-    Test
-    <br />
-    <span class="cursor">Test</span>
+    <div>
+      <div id="header">
+      Test
+      </div>
+      <div id="history"></div>
+      <div id="inputline"><span id="PS0"></span><span id="userinput"></span></div>
+    </div>
+
+    <script src="script.js"></script>
+    <script src="commands.js"></script>
   </body>
 </html>
