Add command history and input states

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <div id="header">
       Test
       </div>
-      <div id="history"></div>
+      <div id="past"></div>
       <div id="inputline"><span id="PS0"></span><span id="userinput"></span></div>
     </div>
 
