Add basic commands

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     </div>
 
     <script src="script.js"></script>
-    <script src="commands.js"></script>
+    <script src="terminal.js"></script>
   </body>
 </html>
