Join everything and refactor

--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
       Test
       </div>
       <div id="past"></div>
-      <div id="inputline"><span id="PS0"></span><span id="userinput"></span></div>
+      <div id="inputline"><span id="PS0"></span><span id="PSR"></span><span id="userinput"></span></div>
     </div>
 
+    <script src="output.js"></script>
     <script src="script.js"></script>
+    <script src="commands.js"></script>
+    <script src="ps0.js"></script>
+    <script src="userinput.js"></script>
+    <script src="history.js"></script>
     <script src="terminal.js"></script>
   </body>
 </html>
